--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,49 @@
-{{> header }}
+<div class="main container">
+    <div class="row">
+        
+        <div class="left col-md-3">
+        <div class="top-bun"></div>
+            <p>Eat-Da-Burger!</p>
+            {{#each burgers}}
+                {{#unless this.devoured}}
+                    <div class="undevoured">
+                        <p>{{this.burger_name}}</p>
+                        <form action="/{{this.id}}?_method=PUT" method="POST">
+                            <input type="hidden" name="devoured" value="true">
+                            <button type="submit">Devour it!</button>
+                        </form>
+                    </div>
+                {{/unless}}
+            {{/each}}
+            <div class="bottom-bun"></div>
+        </div>
 
-<div class="container content">
-    <h1>Burger App</h1>
+        <div class="middle col-md-4 col-md-offset-1">
+            <p>Add A Burger:</p>
+            <div class="burger-added">
+                <form action="/" method="POST">
+                    <input type="text" name="burger_name"><br>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
 
-    {{> addBurger }}
-    
-    <div class="content-burger">
-        {{#each result}} {{> displayBurger }}{{/each}}
+        
+        <div class="right col-md-3 col-md-offset-1">
+        <div class="top-bun"></div>
+            <p>Devoured Burgers</p>
+            {{#each burgers}}
+                {{#if this.devoured}}
+                    <div class="devoured">
+                        <p>{{this.burger_name}}</p>
+                    </div>
+                {{/if}}
+            {{/each}}
+            <form action="/?_method=PUT" method="POST">
+                <input type="hidden" name="devoured" value="false">
+                <button type="submit">Eat It Again!</button>
+            </form>
+            <div class="bottom-bun"></div>
+        </div>
     </div>
-
 </div>
