--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
         <!-- Styling -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Bungee" rel="stylesheet">
-        <link href="/assets/css/style.css" rel="stylesheet" type="text/css">
+        <link href="/assets/css/burger_style.css" rel="stylesheet" type="text/css">
         <title>Eat-Da-Burger!</title>
     </head>
     <body>
