--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
         
         <div class="left col-md-3">
         <div class="top-bun"></div>
-            <p>Eat-Da-Burger!</p>
+            <p>Devour it!</p>
             {{#each burgers}}
                 {{#unless this.devoured}}
                     <div class="undevoured">
@@ -19,7 +19,7 @@
         </div>
 
         <div class="middle col-md-4 col-md-offset-1">
-            <p>Add A Burger:</p>
+            <p>Enter a burger you want to eat Click the "Submit" button:</p>
             <div class="burger-added">
                 <form action="/" method="POST">
                     <input type="text" name="burger_name"><br>
