--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
     <body>
         <div class="jumbotron jumbotron-fluid text-center">
             <div class="container">
-                <h1 class="display-3">Eat-Da-burger!</h1>
+                <h1 class="display-3">Eat-Da-Burger!</h1>
             </div>
         </div>
         {{{ body }}}
